--- a/src/workers_control/flask/translations/es/LC_MESSAGES/messages.po
+++ b/src/workers_control/flask/translations/es/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  Arbeitszeitapp\n"
 "Report-Msgid-Bugs-To: community-arbeitszeitapp@systemli.org\n"
-"POT-Creation-Date: 2025-12-28 20:58+0100\n"
+"POT-Creation-Date: 2025-12-30 14:36+0100\n"
 "PO-Revision-Date: 2024-05-11 13:29+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: es\n"
@@ -295,11 +295,11 @@ msgstr "Actualmente no hay planes esperando revisión"
 #: src/workers_control/flask/templates/auth/accountant_invitation.html:3
 #, python-format
 msgid ""
-"Hello. You were invited to be a public accountant at Arbeitszeitapp. Go to "
-"%(link)s to register."
+"Hello. You were invited to be a public accountant at the Workers Control "
+"app. Go to %(link)s to register."
 msgstr ""
-"Hola. Fuiste invitado/a a ser un/a contador/a público/a en Arbeitszeitapp. "
-"Ve a %(link)s para registrarte."
+"Hola. Fuiste invitado/a a ser contador/a público/a en la aplicación "
+"Workers Control. Ve a %(link)s para registrarte."
 
 #: src/workers_control/flask/templates/auth/activate.html:1
 msgid ""
@@ -453,7 +453,7 @@ msgstr "Registrarse como miembro"
 #: src/workers_control/flask/templates/auth/start.html:10
 #: src/workers_control/flask/templates/auth/unconfirmed_company.html:9
 #: src/workers_control/flask/templates/auth/unconfirmed_member.html:9
-msgid "A platform for working time calculation."
+msgid "A platform for labour time calculation."
 msgstr "Una plataforma para el cálculo del tiempo de trabajo."
 
 #: src/workers_control/flask/templates/auth/start.html:13
@@ -1501,11 +1501,11 @@ msgstr "Saldo actual"
 
 #: src/workers_control/flask/templates/member/notification-about-work-invitation.html:1
 msgid ""
-"You have been invited by a company to join them as a member on "
-"Arbeitszeitapp. Accept or reject via this link:"
+"You have been invited by a company to join them as a member on the Workers "
+"Control app. Accept or reject via this link:"
 msgstr ""
-"Has sido invitado/a por una empresa a unirte a ellos como miembro en "
-"Arbeitszeitapp. Acepta o rechaza a través de este enlace:"
+"Has sido invitado/a por una empresa para unirte a ellos como miembro en la "
+"aplicación Workers Control. Acepta o rechaza a través de este enlace:"
 
 #: src/workers_control/flask/templates/member/show_company_work_invite_details.html:13
 msgid "Reject"
@@ -1697,12 +1697,12 @@ msgstr "Enviar"
 
 #: src/workers_control/flask/templates/user/request_email_change_notification.html:1
 msgid ""
-"Dear Arbeitszeitapp user,\n"
+"Dear user of the Workers Control app,\n"
 "\n"
 "someone tried to change the email address for your user account. If this "
 "was you please visit the following link to confirm this change."
 msgstr ""
-"Estimado/a usuario/a de Arbeitszeitapp,\n"
+"Estimado/a usuario/a de la aplicación Workers Control,\n"
 "\n"
 "alguien intentó cambiar la dirección de correo electrónico de tu cuenta de "
 "usuario. Si fuiste tú, por favor visita el siguiente enlace para confirmar "
@@ -1710,12 +1710,12 @@ msgstr ""
 
 #: src/workers_control/flask/templates/user/request_email_change_warning.html:1
 msgid ""
-"Dear Arbeitszeitapp user,\n"
+"Dear user of the Workers Control app,\n"
 "\n"
 "someone tried to change the email address for your user account. If this "
 "was not you, please contact the administrators of the app."
 msgstr ""
-"Estimado/a usuario/a de Arbeitszeitapp,\n"
+"Estimado/a usuario/a de la aplicación Workers Control,\n"
 "\n"
 "alguien intentó cambiar la dirección de correo electrónico de tu cuenta de "
 "usuario. Si no fuiste tú, por favor contacta a los administradores de la "
@@ -1779,8 +1779,8 @@ msgid "Draft successfully saved."
 msgstr "Borrador guardado con éxito."
 
 #: src/workers_control/web/email/accountant_invitation_presenter.py:33
-msgid "Invitation to Arbeitszeitapp"
-msgstr "Invitación a Arbeitszeitapp"
+msgid "Invitation to Workers Control app"
+msgstr "Invitación a la aplicación Workers Control"
 
 #: src/workers_control/web/email/cooperation_request_email_presenter.py:17
 msgid "A company requests cooperation"
@@ -1790,10 +1790,11 @@ msgstr "Una empresa solicita cooperación"
 #, python-format
 msgid ""
 "Hello %(coordinator)s,<br>A company wants to be part of a cooperation that "
-"you are coordinating. Please check the request in the Arbeitszeitapp."
+"you are coordinating. Please check the request in the Workers Control app."
 msgstr ""
 "Hola %(coordinator)s,<br>Una empresa quiere ser parte de una cooperación "
-"que estás coordinando. Por favor, revisa la solicitud en la Arbeitszeitapp."
+"que estás coordinando. Por favor, revisa la solicitud en la aplicación "
+"Workers Control."
 
 #: src/workers_control/web/email/email_change_confirmation_presenter.py:24
 #: src/workers_control/web/email/email_change_warning_view.py:20
@@ -1801,8 +1802,8 @@ msgid "Email address change requested"
 msgstr "Solicitud de cambio de dirección de correo electrónico"
 
 #: src/workers_control/web/email/invite_worker_presenter.py:24
-msgid "Invitation from a company on Arbeitszeitapp"
-msgstr "Invitación de una empresa en Arbeitszeitapp"
+msgid "Invitation from a company on Workers Control app"
+msgstr "Invitación de una empresa en la aplicación Workers Control"
 
 #: src/workers_control/web/email/notify_about_worker_removal_from_company_presenter.py:18
 msgid "Worker removed from company"
@@ -1825,11 +1826,11 @@ msgstr "Se te pide que seas el coordinador de una cooperación"
 msgid ""
 "Hello %(candidate)s,<br>Your are asked to be the coordinator of the "
 "cooperation '%(cooperation)s'. Please follow this link to check the request"
-" in the Arbeitszeitapp: <a href='%(url)s'>LINK</a>."
+" in the Workers Control app: <a href='%(url)s'>LINK</a>."
 msgstr ""
-"Hola %(candidate)s,<br>Se te pide que seas el coordinador de la cooperación"
-" '%(cooperation)s'. Por favor, sigue este enlace para revisar la solicitud "
-"en la Arbeitszeitapp: <a href='%(url)s'>ENLACE</a>."
+"Hola %(candidate)s,<br>Se te pide que seas el coordinador de la cooperación "
+"'%(cooperation)s'. Por favor, sigue este enlace para revisar la solicitud "
+"en la aplicación Workers Control: <a href='%(url)s'>ENLACE</a>."
 
 #: src/workers_control/web/formatters/plan_details_formatter.py:48
 #: src/workers_control/web/www/presenters/get_company_summary_presenter.py:130
